--- a/app/src/main/res/layout/fragment_login_employee.xml
+++ b/app/src/main/res/layout/fragment_login_employee.xml
@@ -53,7 +53,7 @@
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="64dp"
         android:enabled="true"
-        android:text="@string/action_sign_in"
+        android:text="@string/fill_form"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
