--- a/app/src/main/res/layout/fragment_login_h_r.xml
+++ b/app/src/main/res/layout/fragment_login_h_r.xml
@@ -12,7 +12,7 @@
     tools:context=".FragmentLoginHR">
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/usernameHR"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/passwordHR"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
