Theme Change Applied

--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
     tools:context=".EmployeeActivity">
 
     <ScrollView
@@ -375,7 +376,7 @@
                 android:layout_height="wrap_content"
                 android:text="Choose Image"
                 android:onClick="btnAddImage"
-
+                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                 android:layout_margin="8dp"
                 android:textSize="12dp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -384,7 +385,7 @@
 
             <Button
                 android:id="@+id/Save"
-                style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
