--- a/app/src/main/res/layout/fragment_login_h_r.xml
+++ b/app/src/main/res/layout/fragment_login_h_r.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:theme="@style/Theme.MaterialComponents.Light"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".FragmentLoginHR">
 
@@ -18,11 +19,13 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="96dp"
         android:layout_marginEnd="24dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordHR"
+        app:layout_constraintTop_toTopOf="parent"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
+
         android:selectAllOnFocus="true"
          />
 
@@ -41,20 +44,25 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/usernameHR"
+        />
 
     <Button
         android:id="@+id/loginHR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="64dp"
         android:enabled="true"
         android:text="@string/action_sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameHR"
+        app:layout_constraintTop_toBottomOf="@+id/passwordHR"
+        app:layout_constraintVertical_bias="0.2"
          />
 
 
