--- a/app/src/main/res/layout/fragment_login_employee.xml
+++ b/app/src/main/res/layout/fragment_login_employee.xml
@@ -54,6 +54,9 @@
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="64dp"
         android:enabled="true"
+        style="@style/Widget.MaterialComponents.Button"
+        android:background="@drawable/btn_rounded"
+        android:textColor="@color/colorPrimary"
         android:text="@string/fill_form"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
