--- a/app/src/main/res/layout/fragment_login_h_r.xml
+++ b/app/src/main/res/layout/fragment_login_h_r.xml
@@ -56,6 +56,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="64dp"
+        style="@style/Widget.MaterialComponents.Button"
+        android:background="@drawable/btn_rounded"
+        android:textColor="@color/colorPrimary"
         android:enabled="true"
         android:text="@string/action_sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
