--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material.Light" tools:targetApi="lollipop">
+    <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar" tools:targetApi="lollipop">
         <item name="colorPrimary">#3F51B5</item>
         <!-- Light Indigo -->
         <item name="colorPrimaryDark">#3949AB</item>
