--- a/app/src/main/res/layout/fragment_login_employee.xml
+++ b/app/src/main/res/layout/fragment_login_employee.xml
@@ -65,5 +65,15 @@
         app:layout_constraintVertical_bias="0.2"
         />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
